[package]
name = "rafnet"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
colored = "2"
pnet = "0.34.0"
clap = { version = "3.2", features = ["derive"] }
anyhow = "1.0"
socket2 = "0.5"
pcap = "0.8"
etherparse = "0.13"

[[bin]]
name = "rafnet"
path = "src/main.rs"